modules/kubernetes/labs/service-mesh/templates/bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-service
  labels:
    app: bff-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: bff-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
    spec:
      containers:
        - name: bff-service
          image: mattev02/bff-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
